--- a/akciok.html
+++ b/akciok.html
@@ -220,39 +220,15 @@
       <a href="akciok.html">Akciók</a>
       <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="tovabbiak.html"><i>Továbbiak</i></a>
+      <a href="tovabbiak.html">Továbbiak</a>
+      <a href="index.html"><i style="color: red;">Kijelentkezés</i></a>
     </div>
   </div>
-
-
-
 
 
   <main class="container">
     <h1>KIEMELT AKCIÓK</h1>
 
-    <article class="card">
-      <img src="nyerjescsekkolj.jpg" alt="Akció">
-      <div class="card-body">
-        <h3 class="card-title" style="color: red;"> Nyerj, és csekkolj ki a télből!</h3>
-        <p class="card-text"> <b>JÁTÉKSZERVEZŐ:<br> 7days HU</b></p>
-        <p class="card-text"> <b>Promóciós időszak: <br> 2025. október 06. - 2025. november 30.</b></p>
-
-        <p class="card-text" style="text-align: justify;"> A VakációVágyó 2026 kiegészítő akció keretében annak a
-          felhasználónak aki összegyűjt legalább <span style="color: red;"><b><i>20 db blokkot, akkor 4000 - Ft
-              </i></b></span> bónuszt ír jóvá a felhasználó Perselyébe! </p>
-        <p class="card-text"> <b>Erről bővebben <a
-              href="https://drive.google.com/file/d/1rryYoVr3c1okkjlAftWq41vBFZOZQcPd/view?usp=sharing"><i>ide
-                kattintva</i></a> olvashatsz!</b></p>
-
-        <p class="card-text"> <b><i>Blokkszámláló: </i> </b> <br> Orosz Szilvia blokkjainak száma:  <b>3 db </b><br>Orosz
-          Sándor blokkjainak száma: <b>8 db</b> <br>Orosz Kristóf blokkjainak száma: <b>10 db</b></i><br><b>Összesen: 21
-            db</b></p>
-        <p class="card-text"><b><i>A blokkszámlálót minden vasárnap 20:00-kor frissítjük!</i></b> <br><i>Utolsó
-            frissítés: 2025.11.23. 20:00</i></p>
-        <a href="https://7dayspromo.hu/"><button>IRÁNY A JÁTÉK WEBOLDALA</button></a>
-      </div>
-    </article> <br>
 
     <article class="card">
       <img src="sksmakcio.jpg" alt="Akció">
