--- a/befizetesek.html
+++ b/befizetesek.html
@@ -203,7 +203,8 @@
       <a href="akciok.html">Akciók</a>
       <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="tovabbiak.html"><i>Továbbiak</i></a>
+      <a href="tovabbiak.html">Továbbiak</a>
+      <a href="index.html"><i style="color: red;">Kijelentkezés</i></a>
     </div>
   </div>
 
@@ -335,6 +336,44 @@
                 <div>
           <span class="label2">Határozat:</span> #0002/2025
           <a href="https://drive.google.com/file/d/1ltUu2ve4NcyPvfDPQMhXkX_BZWyliP31/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+</div></div></div>
+
+   <div class="card">
+      <div class="card-title"></div>
+      <div class="card-content">
+        <div><span class="label">Befizető: O.Kristóf</span></div>
+        <div><span class="label">Összeg: 15.000 - Ft</span></div>
+        <div><span class="label">Típus: Persely</span></div>
+        <div><span class="label">Dátum: 2025.12.19.</span></div>
+        <div><span class="label">Pontok: <br>+ 3 pont</span></div>
+        <div>
+          <span class="label2">Tranzakció:</span> #VVB0007
+          <a href="https://drive.google.com/file/d/19edoq6HytoxVXCy1tEAASSMZ6LCekfLX/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+            </div></div></div>
+
+
+         <div class="card">
+      <div class="card-title"></div>
+      <div class="card-content">
+        <div><span class="label">Befizető: O.Kristóf</span></div>
+        <div><span class="label">Összeg: 600 - Ft</span></div>
+        <div><span class="label">Típus: Bónuszjóváírás</span></div>
+        <div><span class="label">Dátum: 2025.12.19.</span></div>
+        
+        <div>
+          <span class="label2">Tranzakció:</span> #VVB0008
+          <a href="https://drive.google.com/file/d/1fCPYuVSq88zYac2T01l-06qQQFVTHVlR/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+        </div>
+
+                <div>
+          <span class="label2">Határozat:</span> #0003/2025
+          <a href="https://drive.google.com/file/d/1qp19kuUMxUWZEV29-AM45315M9ggjsXh/view?usp=sharing" target="_blank"
             class="download-link">Letöltés</a>
 
         </div></div></div>
