--- a/szamlalo.html
+++ b/szamlalo.html
@@ -241,7 +241,7 @@
       <img
         id="modalImage"
         class="modal__img"
-        src="blokk_1123.jpg"
+        src="tudtad.jpg"
         alt="Megnyitott kép – kattints a bezáráshoz"
       />
     </div>
@@ -262,7 +262,8 @@
       <a href="akciok.html">Akciók</a>
       <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="tovabbiak.html"><i>Továbbiak</i></a>
+      <a href="tovabbiak.html">Továbbiak</a>
+      <a href="index.html"><i style="color: red;">Kijelentkezés</i></a>
     </div>
   </div>
 
@@ -345,7 +346,7 @@
     }
 
     // Összesített érték
-    const currentValue = 80600;
+    const currentValue = 96200;
     const maxValue = 1000000;
 
     // ÚJ: Félretett (összesítő)
@@ -354,7 +355,7 @@
     // Egyéni értékek (befizetett)
     const sandorValue = 0;
     const szilviaValue = 0;
-    const kristofValue = 80600;
+    const kristofValue = 96200;
     const individualMax = 340000;
 
     // ÚJ: Egyéni félretett értékek
