--- a/tovabbiak.html
+++ b/tovabbiak.html
@@ -350,7 +350,8 @@
       <a href="akciok.html">Akciók</a>
       <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="tovabbiak.html"><i>Továbbiak</i></a>
+      <a href="tovabbiak.html">Továbbiak</a>
+      <a href="index.html"><i style="color: red;">Kijelentkezés</i></a>
     </div>
   </div>
 
@@ -365,7 +366,9 @@
       OKTÓBER</a>
   </div>
 
- 
+           <a class="btn btn2" href="https://drive.google.com/file/d/15zLERf885sv21Ez4nniVX5ckv6HV51kj/view?usp=sharing"> 2025.
+      NOVEMBER</a>
+  </div>
   <br>
   <h2><i>JÁTÉKSZABÁLYZATOK</i></h2>
 
@@ -375,8 +378,7 @@
       RENDSZER <br></a>
     <a class="btn" href="https://drive.google.com/file/d/1eo1BTQfwFcKFpT222E-JaShCrwAmDlFt/view?usp=sharing">SOK KICSI
       SOKRA MEGY</a>
-    <a class="btn" href="https://drive.google.com/file/d/1rryYoVr3c1okkjlAftWq41vBFZOZQcPd/view?usp=sharing">NYERJ ÉS
-      CSEKKOLJ KI A TÉLBŐL</a>
+   
       <a class="btn" href="https://drive.google.com/file/d/1eMWqspbH8X-EDkOsVq3L6e9eFSH4lZlM/view?usp=sharing"> RÖFI KERESŐ JÁTÉK<br></a>
   </div>
 
