--- a/tudnivalok.html
+++ b/tudnivalok.html
@@ -118,7 +118,8 @@
       <a href="akciok.html">Akciók</a>
       <a href="rangom.html">Rangom</a>
       <a href="tudnivalok.html">Információk</a>
-      <a href="tovabbiak.html"><i>Továbbiak</i></a>
+      <a href="tovabbiak.html">Továbbiak</a>
+      <a href="index.html"><i style="color: red;">Kijelentkezés</i></a>
       
     </div>
   </div>
