--- a/befizetesek.html
+++ b/befizetesek.html
@@ -377,6 +377,21 @@
             class="download-link">Letöltés</a>
 
         </div></div></div>
+
+        <div class="card">
+      <div class="card-title"></div>
+      <div class="card-content">
+        <div><span class="label">Befizető: O.Kristóf</span></div>
+        <div><span class="label">Összeg: 3.800 - Ft</span></div>
+        <div><span class="label">Típus: Persely</span></div>
+        <div><span class="label">Dátum: 2025.12.20.</span></div>
+        <div><span class="label">Pontok: <br>+ 0 pont</span></div>
+        <div>
+          <span class="label2">Tranzakció:</span> #VVB0009
+          <a href="https://drive.google.com/file/d/10fnaad1bIQoPVGPgoF5A3rr43JvnIeRm/view?usp=sharing" target="_blank"
+            class="download-link">Letöltés</a>
+
+            </div></div></div>
 <br>
 <b>--------------------------------------- </b>
 <br> <br>
