--- a/szamlalo.html
+++ b/szamlalo.html
@@ -241,7 +241,7 @@
       <img
         id="modalImage"
         class="modal__img"
-        src="tudtad.jpg"
+        src="akcio_szuperlotto.jpg"
         alt="Megnyitott kép – kattints a bezáráshoz"
       />
     </div>
