--- a/akciok.html
+++ b/akciok.html
@@ -205,6 +205,7 @@
 
 <body>
 
+  
   <!-- NAVBAR -->
   <div class="navbar">
     <a href="index.html" class="logo">VakációVágyó 2026</a>
@@ -229,6 +230,19 @@
   <main class="container">
     <h1>KIEMELT AKCIÓK</h1>
 
+
+    <article class="card">
+      <img src="akcio_szuperlottoplakat.jpg" alt="Akció">
+      <div class="card-body">
+        <h3 class="card-title" style="color: green;"> Húú, ebből sok nyaralásra elmehetnénk!</h3>
+        <p class="card-text"> <b>Promóciós időszak: <br> 2025. december 28. - 2026. február 05.</b></p>
+        <p><b>Sorsolás - Szerencsejáték Zrt. <br> 2026.01.01. 0:20</b></p>
+        <p> Tegyél félre összesen <b>legalább 10 000 Ft</b> (azaz 5000 - Ft , 5000 - Ft) összegű megtakarítást <b>2026. január és február hónapban </b> és cserébe bónuszként jogosult leszel egy
+<b>9 mezős Szilveszteri Szuperlottó szelvényre, </b>  3600 Ft értékben!
+
+</p>
+
+              </div> </article> <br>
 
     <article class="card">
       <img src="sksmakcio.jpg" alt="Akció">
