--- a/akciok.html
+++ b/akciok.html
@@ -238,8 +238,8 @@
         <p class="card-text"> <b>Promóciós időszak: <br> 2025. december 28. - 2026. február 05.</b></p>
         <p><b>Sorsolás - Szerencsejáték Zrt. <br> 2026.01.01. 0:20</b></p>
         <p> Tegyél félre összesen <b>legalább 10 000 Ft</b> (azaz 5000 - Ft , 5000 - Ft) összegű megtakarítást <b>2026. január és február hónapban </b> és cserébe bónuszként jogosult leszel egy
-<b>9 mezős Szilveszteri Szuperlottó szelvényre, </b>  3600 Ft értékben!
-
+<b>9 mezős Szilveszteri Szuperlottó szelvényre, </b>  3600 Ft értékben! <br><br>
+           <a href="https://forms.gle/soJzMdGuXdDoY5yc9"><button>ELOLVASOM A RÉSZLETEKET, JELENTKEZEM A JÁTÉKRA</button></a>
 </p>
 
               </div> </article> <br>
